# cbor-smol

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml  docs.yml
cbor_smol/: all.html  fn.cbor_deserialize.html  fn.cbor_serialize.html  fn.cbor_serialize_bytebuf.html  fn.cbor_serialize_bytes.html  fn.cbor_serialize_extending_bytes.html  fn.cbor_serialize_to.html  index.html  macro.debug.html  macro.debug_now.html  macro.error.html  macro.error_now.html  macro.info.html  macro.info_now.html  macro.log.html  macro.log_now.html  macro.trace.html  macro.trace_now.html  macro.try_debug.html  macro.try_debug_now.html  macro.try_error.html  macro.try_error_now.html  macro.try_info.html  macro.try_info_now.html  macro.try_log_now.html  macro.try_trace.html  macro.try_trace_now.html  macro.try_warn.html  macro.try_warn_now.html  macro.warn.html  macro.warn_now.html  sidebar-items.js  struct.Bytes.html  trait.ArrayLength.html
cbor_smol/consts/: index.html  struct.B0.html  struct.B1.html  struct.Z0.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  type.N1005.html  type.N1006.html  type.N1007.html  type.N1008.html  type.N1009.html  type.N101.html  type.N1010.html  type.N1011.html  type.N1012.html  type.N1013.html  type.N1014.html  type.N1015.html  (+3242 more)
cbor_smol/de/: fn.from_bytes.html  fn.take_from_bytes.html  index.html  struct.Deserializer.html
cbor_smol/error/: enum.Error.html  index.html  type.Result.html
cbor_smol/ser/: index.html  struct.Serializer.html  struct.SliceWriter.html  trait.Writer.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserializer.js  trait.EnumAccess.js  trait.Error.js  trait.VariantAccess.js
implementors/serde/ser/: trait.Error.js  trait.SerializeStruct.js  trait.SerializeStructVariant.js  trait.SerializeTuple.js  trait.SerializeTupleStruct.js  trait.SerializeTupleVariant.js  trait.Serializer.js
implementors/serde/std_error/: trait.Error.js
search.desc/cbor_smol/: cbor_smol-desc-0-.js
src/: consts.rs  de.rs  error.rs  lib.rs  ser.rs
src/cbor_smol/: consts.rs.html  de.rs.html  error.rs.html  lib.rs.html  ser.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/serde/de/: trait.Deserializer.js  trait.Error.js
trait.impl/serde/ser/: trait.Error.js  trait.SerializeStruct.js  trait.SerializeStructVariant.js  trait.SerializeTuple.js  trait.SerializeTupleStruct.js  trait.SerializeTupleVariant.js  trait.Serializer.js
type.impl/core/result/: enum.Result.js
(+2 files in other folders)
