[package]
name = "cbor-smol"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Streamlined serde serializer/deserializer for CBOR"
repository = "https://github.com/nickray/cbor-smol"
readme = "README.md"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/cbor-smol"
keywords = ["CBOR", "serde"]
categories = ["development-tools", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0-alpha.3"
heapless-bytes = "0.1.0"
serde = { version = "1.0", default-features = false } #, features = ["derive"] }

