[package]
name = "cbor-smol"
version = "0.4.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2021"
description = "Streamlined serde serializer/deserializer for CBOR"
repository = "https://github.com/nickray/cbor-smol"
readme = "README.md"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/cbor-smol"
keywords = ["CBOR", "serde"]
categories = ["development-tools", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0-alpha.3"
heapless = "0.7"
heapless-bytes = "0.3"
serde = { version = "1", default-features = false }

[dev-dependencies]
heapless = { version = "0.7", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_bytes = "0.11.12"

[features]
log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
