[package]
name = "cbor-smol"
version = "0.4.1"
authors = ["Nicolas Stalder <n@stalder.io>", "The Trussed developers"]
edition = "2021"
description = "Streamlined serde serializer/deserializer for CBOR"
repository = "https://github.com/trussed-dev/cbor-smol"
readme = "README.md"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/cbor-smol"
keywords = ["CBOR", "serde"]
categories = ["development-tools", "embedded"]

[dependencies]
delog = "0.1.0-alpha.3"
heapless-bytes-v0-3 = { package = "heapless-bytes", version = "0.3", optional = true }
heapless-bytes-v0-4 = { package = "heapless-bytes", version = "0.4", optional = true }
heapless-v0-7 = { package = "heapless", version = "0.7", optional = true }
heapless-v0-8 = { package = "heapless", version = "0.8", optional = true }
serde = { version = "1", default-features = false }

[dev-dependencies]
heapless-v0-8 = { package = "heapless", version = "0.8", features = ["serde"] }
heapless-bytes-v0-4 = { package = "heapless-bytes", version = "0.4" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_bytes = "0.11.12"

[features]
heapless-bytes-v0-3 = ["dep:heapless-bytes-v0-3"]
heapless-bytes-v0-4 = ["dep:heapless-bytes-v0-4"]
heapless-v0-7 = ["dep:heapless-v0-7"]
heapless-v0-8 = ["dep:heapless-v0-8"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
