[package]
name = "cbor-smol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.2.3", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.9"
serde_cbor = "0.11.2"

[dependencies.cbor-smol]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
